add multy steps component

--- a/src/static/scss/components/_buttons.scss
+++ b/src/static/scss/components/_buttons.scss
@@ -10,3 +10,15 @@
   background-image: linear-gradient(to right, $startGradient, $endGradient);
   transition: all 0.5s linear;
 }
+.dis_btn {
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 15px 65px;
+  font-family: "sora-light";
+  font-size: 20px;
+  color: $darkGray;
+  border-radius: 30px;
+  border: 1px solid $lightGray;
+  background-color: #fff;
+  transition: all 0.5s linear;
+}
