--- a/src/static/scss/style.scss
+++ b/src/static/scss/style.scss
@@ -1,7 +1,9 @@
 @import "./helpers/variables";
 @import "./pages/global";
 @import "./components/buttons";
+@import "./components//radiobutton";
 
 @import "./components/form";
 
 @import "./pages/homepage";
+@import "./pages/information";
